// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gNSNPF"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bWlLxs"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX kZQBXW"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX beCigm"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb xtumP"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX fbwHtg"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb lnTkte"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje dnuoWJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX lgYJX"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb cVSLWi"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX keYTLQ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa heXcAt sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb dwWson"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa heXcAt sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX jRbIrO"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa jCnOyj sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb cjgYpn"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa jCnOyj sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX cYnCqw"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX iilGDi"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX jzbgAY"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX dCGShW"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX kfWets"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX gULwSD"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX kFFJqc"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX egKgCb"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX dZClCF"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX fDnSrH"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX jfoHMX"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX XOwkm"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX cYnCqw"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX iilGDi"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX jzbgAY"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX dCGShW"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX kfWets"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX gULwSD"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX kFFJqc"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX egKgCb"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX dZClCF"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX fDnSrH"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX jfoHMX"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX XOwkm"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX kfWets"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-ifAKCX kfWets"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    News
  </p>
</button>
`;
